--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Back-end implementation for phonebook task",
   "main": "index.js",
   "scripts": {
+    "build:ui": "rm -rf build && cd ../FullStackOpen/part2/phonebook && npm run build && cp -r build ../../../FullStackOpen-BE",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
+    "logs:prod": "heroku logs --tail",
     "start": "node index.js",
     "watch": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
