--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/ivaylopetrovdev/FullStackOpen-BE#readme",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1"
